cmake_minimum_required(VERSION 3.10.2)

####################################################################################################
####################################################################################################
####################################################################################################
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FORCE_INLINES")

####################################################################################################
####################################################################################################
####################################################################################################
#c++ 11, always before project to avoid infinite loop
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER "/usr/bin/g++-7")

####################################################################################################
####################################################################################################
####################################################################################################
project(libtinypic)

####################################################################################################
####################################################################################################
####################################################################################################
add_library(libtinypic image.cpp rgbimage.cpp grayscaleimage.cpp ppm.cpp)

add_executable(tinypic_example main.cpp)
target_link_libraries(tinypic_example libtinypic)
