cmake_minimum_required(VERSION 3.9.2)

####################################################################################################
####################################################################################################
####################################################################################################
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FORCE_INLINES")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")

####################################################################################################
####################################################################################################
####################################################################################################
#c++ 11, always before project to avoid infinite loop
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")

####################################################################################################
####################################################################################################
####################################################################################################
project(libtinypic)

####################################################################################################
####################################################################################################
####################################################################################################
include_directories(./include/)
add_library(tinypic src/image.cpp src/ppm.cpp)

add_executable(tinypic_example src/main.cpp)
target_link_libraries(tinypic_example tinypic)


####################################################################################################
####################################################################################################
####################################################################################################
# INSTALL TARGETS
install(TARGETS tinypic DESTINATION /usr/lib/)
install(DIRECTORY ./include/tinypic DESTINATION /usr/include)
